2013-06-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/img/cpe/a:snort:snort.png, src/html/img/cpe/a:sourcefire.png,
	src/html/img/cpe/a:typo3:typo3.png, src/html/img/cpe/a:google.png,
	src/html/img/cpe/a:drupal:drupal.png,
	src/html/img/cpe/a:gnu.png, src/html/img/cpe/a:otrs:otrs.png,
	src/html/img/cpe/a:wordpress:wordpress.png: New.

	CMakeLists.txt: Install new icons.

2013-06-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsad.xsl (get_system_reports_response): Add
	command_result_dialog for error message.

2013-06-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsad.xsl (html-gsa-navigation): Move "last" to end column.

2013-06-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (init_validator): Add apostrophe to info_id validator.

	* src/html/omp.xsl (cve-details, ovaldef-details): Decode CPEs in links.

2013-06-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (info/allinfo, html-allinfo-table): Add severity
	column.

2013-06-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (cpe-details): Add row with (maximum) severity bar.

2013-06-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (cpe-details): Change plain-text CVEs to links
	to the CVEs' details pages in "Reported vulnerabilites".
	(cve-details): Change plain-text CPEs to links to the CPEs' details
	pages in "Vulnerable products".

2013-06-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (html-dfn_cert_adv-table): Use correct get_info type
	in Severity/Max CVSS column.

	* src/html/help.xsl (dfn_cert_advs.html): Replace "definition" with
	"advisory" in paragraph on severity.

2013-06-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (html-config-family-table): Rename table header
	"CVSS" to "Severity" and remove centering.
	(info/cpe, info/nvt, info/cve, info/ovaldef, info/dfn_cert_adv): Resize